--- a/WeatherMenu/Defaults.plist
+++ b/WeatherMenu/Defaults.plist
@@ -7,7 +7,7 @@
 	<key>TemperatureUnit</key>
 	<string>Celsius</string>
 	<key>RefreshInterval</key>
-	<real>15</real>
+	<integer>15</integer>
 	<key>DaysNumber</key>
 	<integer>2</integer>
 </dict>
